# sctools

./: LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
configs/: colemak_select1.sc  dvorak.sc  example.sc  legacy.sc  sunkeys.sc
m4/: ax_strict_cflags.m4
src/: Makefile.am  commands.c  commands.h  hid_tokens.c  hid_tokens.h  macro_tokens.c  macro_tokens.h  rawhid_defs.h  scas.c  scboot.c  scdis.c  scinfo.c  scrd.c  sctool.c  scwr.c  token.h
udev/: 99-soarers-converter.rules
